@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - Exclusion for windows: Rose::DB, Rose::DB::Object
+  - Exclusion for windows: Rose::DB, Rose::DB::Object, Term::EditLine, 
+    Alien::Libbz2
 
 1.74      2015-12-07 09:20:00 -0500
   - Add some MSWin32 exclusions
